# buddy-mlir

./: 4d-conv.mlir  CMakeLists.txt  README.md  cgo22-rolag-artifact.tar.xz  dummy_file.mlir
.github/workflows/: TestBuild.yml  checkExamples.yml  installLLVM.yml
benchmark/: GenerateTestImages.cpp  conv2d-buddy-template  conv2d-buddy-template_constant_border  conv2d-buddy-template_replicate_border  makefile
docs/: DIP.md  conv-opt.md  dip-opt.md
examples/: CMakeLists.txt  README.md
examples/ConvOpt/: kernels.h
examples/DIP-opt/: CMakeLists.txt  TestConstant.mlir  TestCorr2D.mlir  corr2d.mlir  correlation2D.cpp
examples/DIPDialect/: CMakeLists.txt  check.mlir  core  corr2d.mlir  correlation2D.cpp  correlationFFT2D.cpp  dip.mlir  morph2D.cpp  resize2D.cpp  rotation2D.cpp  temp_check.mlir  test.mlir
examples/MLIRSCF/: makefile  scf-parallel.mlir
examples/TosaDialect/: log.mlir  makefile  tosa-resize.mlir
examples/conv-opt/: CMakeLists.txt
examples/conv-opt/comparison/: opencv-filter2D.cpp
examples/dip-opt/: CMakeLists.txt  TestCorr2D.mlir  correlation2D.cpp  correlation2DBenchmark.cpp  testcorr_2d.cpp
frontend/Interfaces/buddy/Core/: Container.h
frontend/Interfaces/buddy/DIP/: DIP.h
frontend/Interfaces/buddy/DIP/imgcodecs/: utils.h
frontend/Interfaces/lib/: CMakeLists.txt  DIP.mlir  check1.mlir  script.sh
html/: md_README.html  pages.html
html/search/: all_0.js  pages_0.js
include/: dip.hpp
include/Dialect/DIP/: DIPOps.td
include/Interface/buddy/core/: ImageContainer.h
include/Interface/buddy/dip/: dip.h
include/Utils/: DIPUtils.h
latex/: md_README.tex  refman.tex
lib/Conversion/LowerDIP/: LowerDIPPass.cpp
lib/Conversion/Lowerdip/: LowerdipPass.cpp
lib/Interface/core/: Container.cpp  ImageContainer.cpp
lib/Utils/: DIPUtils.cpp  Utils.cpp
midend/include/Utils/: DIPUtils.h
midend/lib/Utils/: DIPUtils.cpp
tests/Actions/: TestBuild.sh
tests/Dialect/DIP/: morph2D_f32.mlir  morph2D_f64.mlir  morph2D_i32.mlir  morph2D_i64.mlir  morph2D_i8.mlir  morph2D_invalid_type.mlir
tools/conv-opt/Conversion/: CBSMConvVectorization.cpp
